--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html --port 3234 --hmr-port 3235",
-    "build": "rm -rf dist && parcel build src/index.html"
+    "build": "rm -rf dist && parcel build src/index.html",
+    "test": "ava './test/**/*js' --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ava": "^3.5.0",
     "parcel-bundler": "^1.12.4"
   }
 }
